# DSCI-532_2026_33_fin-health

./: .gitignore  .nojekyll  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE.html  LICENSE.md  README.html  README.md  conda-lock.yml  description.md  environment.yml  pyproject.toml  requirements.txt  search.json  team.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  milestone-master.md  peer-review.md  sub-issue.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ai-critic-issues.yml  ci.yml  docs-preview.yml  docs-publish.yml
notebooks/: eda_analysis.ipynb
reports/: m1_proposal.md  m2_spec.md
site_libs/bootstrap/: bootstrap-00f7022520643ce6841a1f01b771fa8d.min.css
src/: app.py
tests/: test_app.py
